fixed menu length on mobile, changed about me button's color on hover

--- a/src/Home.css
+++ b/src/Home.css
@@ -9,3 +9,7 @@
 .cst-bg-white-transparent {
     background: rgba(255, 255, 255, 0.17);
 }
+
+.cst-bg-white-transparent:hover {
+    background: rgba(255, 255, 255, 0.10);
+}
