--- a/src/output.css
+++ b/src/output.css
@@ -633,6 +633,10 @@ video {
   flex-grow: 1;
 }
 
+.cursor-pointer {
+  cursor: pointer;
+}
+
 .flex-row {
   flex-direction: row;
 }
